<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.125"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_server_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ui_server" />

            <Button
                android:id="@+id/button_server_stop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ui_server_stop" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_select"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/ui_select" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_square"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_square" />

                <Button
                    android:id="@+id/button_cross"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_cross" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_move"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/ui_move" />

                <Button
                    android:id="@+id/button_t"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_t" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_triangle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_triangle" />

                <Button
                    android:id="@+id/button_circle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_circle" />
            </LinearLayout>

            <Button
                android:id="@+id/button_start"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/ui_start" />

        </LinearLayout>

        <TextView
            android:id="@+id/status_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/status_fmt" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>